# wasm_thread

./: .gitignore  Cargo.toml  README.md  build_wasm.ps1  build_wasm.sh  rust-toolchain.toml  rustfmt.toml  test_wasm.sh
.cargo/: config.toml
.github/workflows/: ci.yaml
examples/: simple.html  simple.rs
examples-wasm-pack/: Cargo.toml  web-build-no-module.ps1  web-build-no-module.sh  web-build.ps1  web-build.sh
examples-wasm-pack/.cargo/: Config.toml
examples-wasm-pack/module/: simple.html
examples-wasm-pack/no-module/: simple.html
examples-wasm-pack/src/: lib.rs
examples/wasm-pack/: web-build-no-module.ps1  web-build.ps1
examples/wasm-pack/src/: lib.rs
examples/wasm_thread_example/: Cargo.toml  wasm-pack.sh
examples/wasm_thread_example/pkg/: .gitignore  index.html  index.js  serve.json  worker.js
examples/wasm_thread_example/src/: lib.rs
src/: lib.rs  scoped.rs  script_path.js  utils.rs  wasm_thread.rs  web_worker.js
src/wasm32/: mod.rs  scoped.rs  signal.rs  utils.rs
src/wasm32/js/: module_workers_polyfill.min.js  script_path.js  web_worker.js  web_worker_module.js
tests/: native.rs  wasm.rs
