[package]
name = "wasm_thread"
version = "0.3.1"
authors = ["Jurgis Balciunas <chemicstry@gmail.com>"]
edition = "2018"
description = "An std thread replacement for wasm32 target"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/chemicstry/wasm_thread"
homepage = "https://github.com/chemicstry/wasm_thread"
documentation = "https://docs.rs/wasm_thread"
keywords = ["thread", "wasm", "parallel", "concurrency"]
categories = ["concurrency", "wasm"]
readme = "README.md"

[features]
default = ["es_modules"]
es_modules = []

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Url",
    "Worker",
    "WorkerType",
    "WorkerOptions",
    "Window",
    "Navigator",
    "WorkerNavigator",
] }
js-sys = "0.3"
futures = "0.3"

[dev-dependencies]
log = "0.4"
env_logger = "0.10"
wasm-bindgen-test = "0.3"
async-channel = "2.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = { version = "1.0", features = ["color"] }
console_error_panic_hook = "0.1"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
