[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm_thread = { path = "../." }
log = "0.4"
env_logger = "0.7"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Blob", "DedicatedWorkerGlobalScope", "MessageEvent", "Url", "Worker", "WorkerType", "WorkerOptions"]}
js-sys = "0.3"
futures = "0.3"
async-channel = "1.4"
console_log = { version = "0.2", features = ["color"] }
console_error_panic_hook = "0.1"
